--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,8 @@
 /* GENERICS */
+section:nth-child(odd) {
+  background-color: aquamarine;
+  color: white;
+}
 
 /* UTILS */
 
@@ -11,9 +15,12 @@
   height: 100px;
 }
 
-section:nth-child(odd) {
-  background-color: aquamarine;
-  color: white;
+#footer {
+  background-color: #3a546d;
+}
+
+#footer .footer-bottom {
+  background-color: #2c3e50;
 }
 
 /* DEBUG_SIZE */
