--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,32 @@
 /* GENERICS */
+:root {
+  --header: #2c3e50;
+  --jumbo: #1abc9c;
+  --footer: #3a546d;
+  --pc-1: #ba4b63;
+  --pc-2: #1ea4b6;
+  --pc-3: #140f0f;
+  --pc-4: #1c83c1;
+  --pc-5: #0e38b5;
+  --pc-6: #ccb2a3;
+  --black: #000000;
+  --white: #ffffff;
+}
+
 section:nth-child(odd) {
-  background-color: aquamarine;
-  color: white;
+  background-color: var(--jumbo);
+  color: var(--white);
+}
+
+section {
+  padding: 10px 0;
 }
 
 /* UTILS */
 
 /* STRUCTURE */
 #header {
+  background-color: var(--header);
   height: 100px;
 }
 
@@ -16,11 +35,11 @@ section:nth-child(odd) {
 }
 
 #footer {
-  background-color: #3a546d;
+  background-color: var(--footer);
 }
 
 #footer .footer-bottom {
-  background-color: #2c3e50;
+  background-color: var(--header);
 }
 
 /* DEBUG_SIZE */
