--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ section:nth-child(odd) {
 }
 
 section {
-  padding: 10px 0;
+  padding: 50px 0;
 }
 
 /* UTILS */
@@ -65,4 +65,10 @@ section:nth-child(even) .riga {
 .box-h {
   height: 100px;
   background-color: chocolate;
+}
+
+.btn-contact {
+  background-color: var(--jumbo);
+  color: var(--white);
+  border: 1px solid var(--jumbo);
 }
